# learn-rust-notes

freyja-api/: Cargo.toml
go-freyja-api/: go.mod
hello-world/: Cargo.toml  borrowing.rs.example  concurrency.rs  main.rs  main.rs.example  modulin.rs.example  random-number.rs.example  say_hello.rs  using_my_crate.rs.example
say_hello/: Cargo.toml
say_hello/src/: lib.rs
